--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ rich = "^13.7.0"
 unidecode = "^1.3.6"
 pypdf = "^4.0.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.dev.dependencies]
 snapshottest = "^0.6.0"
 pytest = "^7.1.3"
 mypy = "^0.982"
